fixed smells